  please stop using the old ones.

 Simix:
 * Bug fixes around the resource failures: don't let the processes
   survive the host they are running onto.
 * Add an interface to execute cleanup functions when a process is killed,
   to avoid memory leaks.
 * Add an interface to auto-restart processes when the host in which they are
   executing comes back.

 SimDag:
 * New types of typed tasks. SD_TASK_COMP_PAR_AMDAHL represents a
   parallel task whose initial work is distributed among host according
   to the Amdahl's law. Such tasks are created with a parameter alpha
   that corresponds to the non-parallelizable part of the computation.
   SD_TASK_COMM_PAR_MXN_1D_BLOCK represents a complex data redistribution
   between two sets of workstations assuming a 1D block distribution (each
   workstation owns a similar share of data) on both sides.

   These tasks can be scheduled with SD_task_schedulel or SD_task_schedulev.
   Data redistribution will be automatically scheduled once parent and child
   are both scheduled. The filling of computation_amount and
   communication_amount structures is now done seamlessly thanks to the chosen
   assumptions.
 * New function SD_workstation_dump to display various information
 * New function SD_task_set_rate to throttle the bandwidth allowed to be used 
   by a SD_TASK_COMM_E2E typed task. This rate depends on both the nominal 
   bandwidth on the route onto which the task is  scheduled and the amount of 
   data to transfer.
   To divide the nominal bandwidth by 2, the rate then has to be :
                     rate = bandwidth/(2*amount)
 * Compute tasks that have failed can now be rescheduled and executed again
   (from their beginning)
 * Increasing source code coverage (src/simdag is now covered at 91.5%
   on average)
   
 SMPI:
 * Re-implement time-independent trace replay using SMPI (at the
   smpi_smp_* level) instead of MSG. This should replace
   examples/msg/actions/actions.c
   
 XBT: