@@ -34,6 +34,8 @@ SimGrid (3.8) NOT RELEASED; urgency=low
    to avoid memory leaks.
  * Add an interface to auto-restart processes when the host in which they are
    executing comes back.
+ * Ensures that SIMIX_clean is called automatically. It's not part of
+   the public interface anymore (bindings should be updated).
 
  SimDag:
  * New types of typed tasks. SD_TASK_COMP_PAR_AMDAHL represents a
